--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.7",
     "pg": "^8.6.0"
